Implement Phase 1B configuration intelligence with plugin architecture
- Add standard-agnostic orchestration services (ConfigurationInferenceService, MessagePatternAnalyzer)
- Create HL7-specific plugins (HL7VendorDetectionPlugin, HL7FieldAnalysisPlugin)
- Remove hardcoded standard logic from core services
- Clean up obsolete Configuration/Inference directory
- Wire up plugin registration in ServiceCollectionExtensions

--- a/docs/roadmap/wave1/082625.md
+++ b/docs/roadmap/wave1/082625.md
@@ -487,4 +487,31 @@ namespace Pidgeon.Core.Services.Configuration
 
 ---
 
+## 🧹 **POST-PHASE 1B: TECHNICAL DEBT CLEANUP**
+
+### **Issue: Legacy Code and Comments**
+During Phase 1B plugin architecture refactoring, several files accumulated technical debt in the form of:
+- "Legacy" method comments referencing obsolete code
+- TODO comments about temporary implementations
+- Orphaned code patterns that no longer function properly
+- Hardcoded standard logic mixed with plugin delegation
+
+### **Files Requiring Cleanup (Post-Phase 1B)**
+- `VendorDetectionService.cs` - Contains "legacy" HL7 extraction methods
+- `FormatDeviationDetector.cs` - May contain obsolete standard-specific logic  
+- `FieldPatternAnalyzer.cs` - Switch statement patterns that should be plugin-based
+- Any other files with "Legacy", "TODO: Replace", or similar technical debt markers
+
+### **Cleanup Strategy**
+**After Phase 1B completion**, conduct dedicated cleanup session:
+1. **Codebase-wide scan** for "legacy", "TODO: Replace", "temporary" comments
+2. **Remove obsolete code** entirely (git preserves history)
+3. **Clean up orphaned methods** that are no longer called
+4. **Verify plugin delegation** is complete and working
+5. **Remove hardcoded standard logic** from core orchestrator services
+
+**Success Criteria**: Zero references to "legacy" or "TODO: Replace" in codebase, all core services are clean orchestrators.
+
+---
+
 *This document represents the active development plan for Pidgeon Wave 1, building on the solid architectural foundation established in Weeks 1-2. Each phase is designed to validate the next while building unique competitive advantages in the healthcare interoperability market.*
